Change log started August 2009.

January 2010
================================================================================
 + Added launch_zmachine() which launches the Z-Machine, late downloading the files it needs. (library.js)
 + Rearranged the packages to create zmachine.js.

December 2009
================================================================================
 + Added file.download_to_array(), with binary support.

September 2009
================================================================================
 + Began working on the Library. Moved code from web-zui.js to library.js, and added intro.js and outro.js.
 + Gnusto now uses a Quetzal class, so changed the Parchment interfaces to it.
 - Removed beret.js

August 2009
================================================================================
 + Added base64 functions that use native functions if available. (file.js, base64.js obsoleted)