@@ -2,8 +2,6 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" type="text/css" href="parchment.css">
 	<title>Parchment</title>
 	<script src="src/lib/jquery.js"></script>
 	<script src="src/plugins/class.js"></script>
@@ -18,7 +16,9 @@
 	<script src="src/parchment/ui.js"></script>
 	<script src="src/parchment/library.js"></script>
 	<script src="src/parchment/outro.js"></script>
-</head>
+	<link rel="stylesheet" type="text/css" href="parchment.css">
+	<meta name="viewport" content="width=device-width">
+	</head>
 <body>
 <div id="top-window" class="buffered-window"></div>
 <div id="buffered-windows"></div>
