@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" type="text/css" href="parchment.css">
 	<title>Parchment</title>
-	<script src="lib/jquery.min.js"></script>
-	<script src="lib/parchment.min.js"></script>
+	<script src="lib/jquery.min.js" defer></script>
+	<script src="lib/parchment.min.js" defer></script>
+	<link rel="stylesheet" type="text/css" href="parchment.css">
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 <div id="top-window" class="buffered-window"></div>
